2006-09-26  Per Bothner  <per@bothner.com>

	* RunXQTS.java: Various changes to approximate schema-defined format.
	(XQTS_RESULT_NAMESPACE): New constant for namespace to use.

	* TestMisc.java: Update now that namespace declarations are sorted.

2006-09-19  Per Bothner  <per@bothner.com>

	* RunXQTS.java (main): Don't clear escapeNonAscii on xqlog after all.
	(evalTest): Instead clear it for "actual" output.
	Also canonicalizeCDATA to disable output of CDATA sections.
	(<init>): Remove an expected failure, which now passes.

	* RunXQTS.java (main): Remove bogus TestMisc.printSummary call.

	* RunXQTS.java (expectedError): Replace single String by ...
	(expectedErrorsBuf): ... buffer of sequence of error codes.
	(evalTest): Update to handle set of possible expected error codes.
	If both <output-file> and <expected-error> both seen, then it's ok
	to not cause an error if an <output-file> matches.

2006-09-18  Per Bothner  <per@bothner.com>

	* Makefile.am (check): Also run check-XQTS, if WITH_XQTS configured.
	(check-without-XQTS): Check except for XQTS.

	* Makefile.am (check-XQTS): Also check fn:trace output.
	* XQTS-trace.exp: New file - expected fn:trace output.

	* RunXQTS.java (main): Clear escapeNonAscii.

2006-09-14  Per Bothner  <per@bothner.com>

	* RunXQTS.java (endGroup): Add handing of <input-URI>.
	(<init>): Update expected failures.

2006-09-13  Per Bothner  <per@bothner.com>

	* RunXQTS.java (main): Update XMLPrinter construction.
	We want to print XML decl, use 'XML' style, and pretty-print.

	* TestMisc.java (toString): Do close on XMLPrinter.

2006-09-12  Per Bothner  <per@bothner.com>

	* RunXQTS.java: Fix some memory leaks.
	(evalTest): Make sure to close in even on SyntaxException.
	Close xout.  Close expectStream.
	(endGroup): Move outer output operations outside try/catch.

2006-09-02  Per Bothner  <per@bothner.com>

	* RunXQTS.java: Use XMLPrinter for XQTS.log instead of
	"hand-formatted" XML.
	(log): Remove OutPort field.